fixed spacing

--- a/front-end/src/views/community/CommunityView.styles.scss
+++ b/front-end/src/views/community/CommunityView.styles.scss
@@ -1,7 +1,6 @@
-.borderContainer {
+.borderContainerr {
   border: 4px solid #000000;
-  padding: 10px;
-  margin: 10px;
+  margin-right: 0;
 }
 
 .tableHeader {
@@ -20,12 +19,11 @@
   }
 }
 
-.scrollableContainer {
-  border: 4px solid #000000;
+.scrollableContainerr {
+  border: 2px solid #2f2f2f;
   table-layout: 'fixed';
   overflow-y: scroll;
-  overflow-x: scroll;
-  height: 400px;
+  height: 60vh;
 }
 
 .button {
